--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
-    "@angular/cdk": "^13.0.0",
+    "@angular/cdk": "^13.3.8",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
+    "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "~13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "@nebular/eva-icons": "9.0.3",
+    "@nebular/eva-icons": "^9.0.3",
     "@nebular/theme": "^9.0.3",
-    "eva-icons": "^1.1.2",
+    "eva-icons": "^1.1.3",
     "primeicons": "^5.0.0",
     "primeng": "^13.4.1",
     "rxjs": "~7.5.0",
